changed img link

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Israel's Personal Website😊</title>
   <table cellspacing="20">
       <tr>
-        <td><img src="E:\Code portfolio\Udemy web development\Personal website(html)/Afangideh-pix-modified.png" alt="Oops! This was supposed to be
+        <td><img src="Afangideh-pix-modified.png" alt="Oops! This was supposed to be
       a picture of Israel"> </td>
         <td>
           <h1>Israel Afangideh</h1>
