change stylesheet link

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </table>
 
 
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="styles.css">
   <meta name="description" content="Israel's personal website is a
     reservoir of his thoughts and updates on the world" </head>
 
